improve code qualiy